--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -119,7 +119,6 @@
 
   alert: default
 
-
 #########################
 # AIR release tests
 #########################
@@ -152,7 +151,6 @@
       timeout: 1800
 
   alert: default
-
 
 - name: air_benchmark_data_bulk_ingest
   group: AIR tests
@@ -270,7 +268,6 @@
 
   alert: default
 
-
 - name: air_benchmark_torch_mnist_cpu_1x4
   group: AIR tests
   working_dir: air_tests/air_benchmarks
@@ -292,7 +289,6 @@
 
   alert: default
 
-
 - name: air_benchmark_torch_batch_prediction_gpu_1x1_20gb
   group: AIR tests
   working_dir: air_tests/air_benchmarks
@@ -313,7 +309,6 @@
     file_manager: job
 
   alert: default
-
 
 # TODO(jiaodong): This leads to CUDA OOM on release tool but succeeds on
 # workspaces, re-enabled it once inline conversions are fixed
@@ -340,7 +335,6 @@
 
 #   alert: default
 
-
 - name: air_benchmark_torch_mnist_cpu_4x4
   group: AIR tests
   working_dir: air_tests/air_benchmarks
@@ -364,7 +358,6 @@
     file_manager: job
 
   alert: default
-
 
 - name: air_benchmark_tune_torch_mnist
   group: AIR tests
@@ -414,7 +407,6 @@
 
   alert: default
 
-
 # Ray AIR distributed Tensorflow benchmarks
 - name: air_benchmark_tensorflow_mnist_cpu_4x1
   group: AIR tests
@@ -440,7 +432,6 @@
 
   alert: default
 
-
 - name: air_benchmark_tensorflow_mnist_cpu_1x4
   group: AIR tests
   working_dir: air_tests/air_benchmarks
@@ -461,7 +452,6 @@
     file_manager: job
 
   alert: default
-
 
 - name: air_benchmark_tensorflow_mnist_cpu_4x4
   group: AIR tests
@@ -488,7 +478,6 @@
     file_manager: job
 
   alert: default
-
 
 - name: air_benchmark_tensorflow_mnist_gpu_4x4
   group: AIR tests
@@ -526,7 +515,6 @@
 
   alert: default
 
-
 - name: air_benchmark_pytorch_training_e2e_gpu_1x1_20gb
   group: AIR tests
   working_dir: air_tests/air_benchmarks
@@ -547,7 +535,6 @@
     file_manager: job
 
   alert: default
-
 
 - name: air_benchmark_pytorch_training_e2e_gpu_4x4_100gb
   group: AIR tests
@@ -1018,7 +1005,6 @@
 
   alert: default
 
-
 #######################
 # ML user tests
 #######################
@@ -1350,7 +1336,8 @@
   run:
     timeout: 600
 
-    script: python workloads/run_cloud_test.py durable_upload --trainable rllib_str
+    script:
+      python workloads/run_cloud_test.py durable_upload --trainable rllib_str
       --bucket s3://tune-cloud-tests/durable_upload_rllib_str
 
     wait_for_nodes:
@@ -1381,7 +1368,8 @@
 
   run:
     timeout: 600
-    script: python workloads/run_cloud_test.py durable_upload --trainable rllib_trainer
+    script:
+      python workloads/run_cloud_test.py durable_upload --trainable rllib_trainer
       --bucket s3://tune-cloud-tests/durable_upload_rllib_trainer
 
     wait_for_nodes:
@@ -1409,7 +1397,7 @@
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: tpl_gcp_k8s_4x8.yaml
-    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM  # anyscale_k8s_gcp_cloud
+    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM # anyscale_k8s_gcp_cloud
     autosuspend_mins: 60
 
   run:
@@ -1439,7 +1427,7 @@
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: tpl_gcp_k8s_4x8.yaml
-    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM  # anyscale_k8s_gcp_cloud
+    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM # anyscale_k8s_gcp_cloud
     autosuspend_mins: 60
 
   run:
@@ -1469,7 +1457,7 @@
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: tpl_gcp_k8s_4x8.yaml
-    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM  # anyscale_k8s_gcp_cloud
+    cloud_id: cld_k8WcxPgjUtSE8RVmfZpTLuKM # anyscale_k8s_gcp_cloud
     autosuspend_mins: 60
 
   run:
@@ -1481,7 +1469,6 @@
       num_nodes: 4
 
   alert: tune_tests
-
 
 ########################
 # Tune scalability tests
@@ -1688,7 +1675,6 @@
 
   alert: tune_tests
 
-
 ########################
 # Golden Notebook tests
 ########################
@@ -1766,7 +1752,6 @@
     type: client
 
   alert: default
-
 
 #######################
 # Long running tests
@@ -2294,7 +2279,6 @@
     type: client
 
   alert: default
-
 
 ########################
 # Serve tests
@@ -2855,7 +2839,8 @@
 
   run:
     timeout: 3000
-    script: python shuffle/shuffle_test.py --num-partitions=200 --partition-size=500e6
+    script:
+      python shuffle/shuffle_test.py --num-partitions=200 --partition-size=500e6
       --no-streaming
 
     wait_for_nodes:
@@ -2879,7 +2864,8 @@
 
   run:
     timeout: 3000
-    script: python shuffle/shuffle_test.py --num-partitions=500 --partition-size=100e6
+    script:
+      python shuffle/shuffle_test.py --num-partitions=500 --partition-size=100e6
       --no-streaming
 
     type: sdk_command
@@ -2900,7 +2886,8 @@
 
   run:
     timeout: 3000
-    script: python shuffle/shuffle_test.py --num-partitions=50 --partition-size=1e9
+    script:
+      python shuffle/shuffle_test.py --num-partitions=50 --partition-size=1e9
       --no-streaming
 
     type: sdk_command
@@ -2962,7 +2949,8 @@
 
   run:
     timeout: 3000
-    script: python shuffle/shuffle_test.py --num-partitions=1000 --partition-size=1e9
+    script:
+      python shuffle/shuffle_test.py --num-partitions=1000 --partition-size=1e9
       --no-streaming
 
     wait_for_nodes:
@@ -3046,7 +3034,8 @@
 
   run:
     timeout: 4000
-    script: python shuffle/shuffle_test.py --num-partitions=1000 --partition-size=1e9
+    script:
+      python shuffle/shuffle_test.py --num-partitions=1000 --partition-size=1e9
       --no-streaming
 
     type: sdk_command
@@ -3067,7 +3056,8 @@
 
   run:
     timeout: 3600
-    script: python placement_group_tests/long_running_performance_test.py --num-stages
+    script:
+      python placement_group_tests/long_running_performance_test.py --num-stages
       2000
 
     wait_for_nodes:
@@ -3097,7 +3087,6 @@
     timeout: 1800
     script: OMP_NUM_THREADS=64 RAY_ADDRESS= python run_microbenchmark.py
 
-
 - name: microbenchmark_staging
   group: core-daily-test
   team: core
@@ -3114,7 +3103,6 @@
   run:
     timeout: 1800
     script: OMP_NUM_THREADS=64 RAY_ADDRESS= python run_microbenchmark.py
-
 
 - name: microbenchmark_38
   group: core-daily-test
@@ -3147,7 +3135,8 @@
 
   run:
     timeout: 7200
-    script: python dask_on_ray/dask_on_ray_sort.py --nbytes 10_000_000_000 --npartitions
+    script:
+      python dask_on_ray/dask_on_ray_sort.py --nbytes 10_000_000_000 --npartitions
       50 --num-nodes 1 --ray --data-dir /tmp/ray --file-path /tmp/ray
 
     type: sdk_command
@@ -3168,7 +3157,8 @@
 
   run:
     timeout: 7200
-    script: python dask_on_ray/dask_on_ray_sort.py --nbytes 100_000_000_000 --npartitions
+    script:
+      python dask_on_ray/dask_on_ray_sort.py --nbytes 100_000_000_000 --npartitions
       200 --num-nodes 1 --ray --data-dir /tmp/ray --file-path /tmp/ray
 
     type: sdk_command
@@ -3189,7 +3179,8 @@
 
   run:
     timeout: 7200
-    script: python dask_on_ray/large_scale_test.py --num_workers 20 --worker_obj_store_size_in_gb
+    script:
+      python dask_on_ray/large_scale_test.py --num_workers 20 --worker_obj_store_size_in_gb
       20 --error_rate 0  --data_save_path /tmp/ray
 
     wait_for_nodes:
@@ -3206,7 +3197,8 @@
 
     run:
       timeout: 7200
-      script: python dask_on_ray/large_scale_test.py --num_workers 4 --worker_obj_store_size_in_gb
+      script:
+        python dask_on_ray/large_scale_test.py --num_workers 4 --worker_obj_store_size_in_gb
         20 --error_rate 0  --data_save_path /tmp/ray
 
       wait_for_nodes:
@@ -3227,7 +3219,8 @@
 
   run:
     timeout: 7200
-    script: python dask_on_ray/large_scale_test.py --num_workers 150 --worker_obj_store_size_in_gb
+    script:
+      python dask_on_ray/large_scale_test.py --num_workers 150 --worker_obj_store_size_in_gb
       70 --error_rate 0  --data_save_path /tmp/ray
 
     wait_for_nodes:
@@ -3244,7 +3237,8 @@
 
     run:
       timeout: 7200
-      script: python dask_on_ray/large_scale_test.py --num_workers 32 --worker_obj_store_size_in_gb
+      script:
+        python dask_on_ray/large_scale_test.py --num_workers 32 --worker_obj_store_size_in_gb
         70 --error_rate 0  --data_save_path /tmp/ray
 
       wait_for_nodes:
@@ -3306,7 +3300,8 @@
 
     run:
       timeout: 3600
-      script: python stress_tests/test_dead_actors.py --num-nodes=4 --num-parents=3
+      script:
+        python stress_tests/test_dead_actors.py --num-nodes=4 --num-parents=3
         --num-children=3
 
 # The full test is not stable, so run the smoke test only.
@@ -3326,7 +3321,8 @@
 
   run:
     timeout: 3600
-    script: python stress_tests/test_threaded_actors.py --test-runtime 1800 --kill-interval_s
+    script:
+      python stress_tests/test_threaded_actors.py --test-runtime 1800 --kill-interval_s
       30
 
     wait_for_nodes:
@@ -3387,7 +3383,8 @@
 
   run:
     timeout: 7200
-    script: python dask_on_ray/dask_on_ray_sort.py --nbytes 1_000_000_000_000 --npartitions
+    script:
+      python dask_on_ray/dask_on_ray_sort.py --nbytes 1_000_000_000_000 --npartitions
       1000 --num-nodes 31 --ray --data-dir /tmp/ray --s3-bucket core-nightly-test
 
     wait_for_nodes:
@@ -3417,7 +3414,6 @@
 
     type: sdk_command
     file_manager: sdk
-
 
 - name: pg_autoscaling_regression_test
   group: core-daily-test
@@ -3459,7 +3455,6 @@
 
     type: sdk_command
     file_manager: sdk
-
 
 #########################
 # Core Scalability Tests
@@ -3584,7 +3579,6 @@
       wait_for_nodes:
         num_nodes: 2
 
-
 - name: many_pgs
   group: core-scalability-test
   working_dir: benchmarks
@@ -3668,7 +3662,8 @@
 
   run:
     timeout: 3600
-    script: python distributed/test_scheduling.py --total-num-task=1984000 --num-cpu-per-task=1
+    script:
+      python distributed/test_scheduling.py --total-num-task=1984000 --num-cpu-per-task=1
       --task-duration-s=0 --total-num-actors=1 --num-actors-per-nodes=1
 
     wait_for_nodes:
@@ -3692,7 +3687,8 @@
 
   run:
     timeout: 3600
-    script: python distributed/test_scheduling.py --total-num-task=1984000 --num-cpu-per-task=1
+    script:
+      python distributed/test_scheduling.py --total-num-task=1984000 --num-cpu-per-task=1
       --task-duration-s=0 --total-num-actors=32 --num-actors-per-nodes=1
 
     wait_for_nodes:
@@ -3877,7 +3873,8 @@
 
   run:
     timeout: 9600
-    script: python pipelined_training.py --epochs 2 --num-windows 5 --num-files 915
+    script:
+      python pipelined_training.py --epochs 2 --num-windows 5 --num-files 915
       --debug
 
     wait_for_nodes:
@@ -3901,7 +3898,8 @@
 
   run:
     timeout: 14400
-    script: python ray_sgd_training.py --address auto --use-s3 --num-workers 16 --use-gpu
+    script:
+      python ray_sgd_training.py --address auto --use-s3 --num-workers 16 --use-gpu
       --large-dataset
 
     wait_for_nodes:
@@ -3937,7 +3935,8 @@
 
   run:
     timeout: 7200
-    script: python ray_sgd_training.py --address auto --use-s3 --num-workers 16 --use-gpu
+    script:
+      python ray_sgd_training.py --address auto --use-s3 --num-workers 16 --use-gpu
       --large-dataset --debug
 
     wait_for_nodes:
@@ -4140,7 +4139,8 @@
     wait_for_nodes:
       num_nodes: 21
     prepare: python setup_chaos.py --node-kill-interval 100
-    script: python dask_on_ray/large_scale_test.py --num_workers 20 --worker_obj_store_size_in_gb
+    script:
+      python dask_on_ray/large_scale_test.py --num_workers 20 --worker_obj_store_size_in_gb
       20 --error_rate 0  --data_save_path /tmp/ray
 
     type: sdk_command
@@ -4164,7 +4164,8 @@
     wait_for_nodes:
       num_nodes: 21
     prepare: python setup_chaos.py --node-kill-interval 100
-    script: python dask_on_ray/large_scale_test.py --num_workers 150 --worker_obj_store_size_in_gb
+    script:
+      python dask_on_ray/large_scale_test.py --num_workers 150 --worker_obj_store_size_in_gb
       70 --error_rate 0  --data_save_path /tmp/ray
 
     type: sdk_command
@@ -4187,8 +4188,9 @@
     timeout: 7200
     wait_for_nodes:
       num_nodes: 21
-    prepare: ' python setup_chaos.py --node-kill-interval 300'
-    script: python dataset/pipelined_training.py --epochs 1 --num-windows 15  --num-files
+    prepare: " python setup_chaos.py --node-kill-interval 300"
+    script:
+      python dataset/pipelined_training.py --epochs 1 --num-windows 15  --num-files
       915 --debug
 
     type: sdk_command
@@ -4209,7 +4211,7 @@
 
   run:
     timeout: 7200
-    prepare: ' python setup_chaos.py --node-kill-interval 1200 --max-nodes-to-kill 3'
+    prepare: " python setup_chaos.py --node-kill-interval 1200 --max-nodes-to-kill 3"
     script: RAY_DATASET_PUSH_BASED_SHUFFLE=1 python dataset/sort.py --num-partitions=1000 --partition-size=1e9
     wait_for_nodes:
       num_nodes: 20
@@ -4231,7 +4233,7 @@
 
   run:
     timeout: 7200
-    prepare: ' python setup_chaos.py --node-kill-interval 900 --max-nodes-to-kill 3'
+    prepare: " python setup_chaos.py --node-kill-interval 900 --max-nodes-to-kill 3"
     script: python dataset/sort.py --num-partitions=1000 --partition-size=1e9
     wait_for_nodes:
       num_nodes: 20
@@ -4255,7 +4257,7 @@
 
   run:
     timeout: 7200
-    prepare: ' python setup_chaos.py --node-kill-interval 600 --max-nodes-to-kill 2'
+    prepare: " python setup_chaos.py --node-kill-interval 600 --max-nodes-to-kill 2"
     script: python dataset/sort.py --num-partitions=1000 --partition-size=1e9 --shuffle
     wait_for_nodes:
       num_nodes: 20
@@ -4279,7 +4281,7 @@
 
   run:
     timeout: 7200
-    prepare: ' python setup_chaos.py --node-kill-interval 600 --max-nodes-to-kill 2'
+    prepare: " python setup_chaos.py --node-kill-interval 600 --max-nodes-to-kill 2"
     script: RAY_DATASET_PUSH_BASED_SHUFFLE=1 python dataset/sort.py --num-partitions=1000 --partition-size=1e9 --shuffle
     wait_for_nodes:
       num_nodes: 20
@@ -4303,8 +4305,7 @@
 
   run:
     timeout: 7200
-    prepare: 'echo hi'
+    prepare: bash prepare.sh
     script: python run_gcs_ft_on_k8s.py
     type: sdk_command
     file_manager: sdk
-
