--- a/release/k8s_tests/app_config.yaml
+++ b/release/k8s_tests/app_config.yaml
@@ -15,6 +15,7 @@ python:
 
 post_build_cmds:
   # Install gcloud tools
+  - sudo apt-get remove -y google-cloud-sdk
   - echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
   - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
   - sudo apt-get update && sudo apt-get install google-cloud-cli
