--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2701,6 +2701,31 @@
 
   alert: default
 
+
+- name: rllib_learning_tests_ppo
+  group: RLlib tests
+  working_dir: rllib_tests
+
+  legacy:
+    test_name: learning_tests
+    test_suite: rllib_tests
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: 1gpu_24cpus.yaml
+
+  run:
+    timeout: 18000
+    script: python learning_tests/run.py --yaml-sub-dir=ppo
+    type: sdk_command
+    file_manager: job
+
+  alert: default
+
 - name: rllib_learning_tests_bc
   group: RLlib tests
   working_dir: rllib_tests
