--- a/release/ml_user_tests/ray-lightning/app_config_master.yaml
+++ b/release/ml_user_tests/ray-lightning/app_config_master.yaml
@@ -7,7 +7,7 @@ python:
   pip_packages:
     - tblib
     # Need to have in pip_packages so it is installed on the driver.
-    - git+https://github.com/ray-project/ray_lightning#ray_lightning
+    - git+https://github.com/ray-project/ray_lightning@6aed848f757a03c03166c1a9bddfeea5153e7b90#ray_lightning
     - torch==1.9.0
   conda_packages: []
 
@@ -16,7 +16,7 @@ post_build_cmds:
   - echo {{ env["TIMESTAMP"] }}
   - pip3 install -U --force-reinstall pytorch-lightning lightning-bolts
   - pip uninstall ray_lightning -y # Uninstall first so pip does a reinstall.
-  - pip3 install -U --no-cache-dir git+https://github.com/ray-project/ray_lightning#ray_lightning
+  - pip3 install -U --no-cache-dir git+https://github.com/ray-project/ray_lightning@6aed848f757a03c03166c1a9bddfeea5153e7b90#ray_lightning
   - pip3 install --force-reinstall torch==1.9.0
   - pip3 install --force-reinstall torchvision==0.10.0
   - pip uninstall -y ray || true && pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
