--- a/doc/requirements-doc.txt
+++ b/doc/requirements-doc.txt
@@ -36,7 +36,7 @@ transformers
 git+https://github.com/ray-project/tune-sklearn@master#tune-sklearn
 git+https://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray
 git+https://github.com/ray-project/lightgbm_ray@main#lightgbm_ray
-git+https://github.com/ray-project/ray_lightning@main#ray_lightning
+git+https://github.com/ray-project/ray_lightning@main#ray_lightning; python_version >= '3.7'
 
 # Syntax highlighting
 Pygments==2.11.2
