--- a/python/requirements/ml/requirements_upstream.txt
+++ b/python/requirements/ml/requirements_upstream.txt
@@ -2,7 +2,7 @@
 # Because they depend on Ray, we can't pin the subdependencies.
 # So we separate its own requirements file.
 
-ray_lightning==0.2.0
+git+https://github.com/ray-project/ray_lightning@main#ray_lightning; python_version >= '3.7'
 tune-sklearn==0.4.3
 xgboost_ray==0.1.9
 lightgbm_ray==0.1.4
