--- a/python/requirements/ml/requirements_tune.txt
+++ b/python/requirements/ml/requirements_tune.txt
@@ -27,8 +27,8 @@ mxnet==1.8.0.post0
 nevergrad==0.4.3.post7
 optuna==2.10.0
 pytest-remotedata==0.3.2
-lightning-bolts==0.4.0
-pytorch-lightning==1.5.10
+lightning-bolts==0.5.0; python_version >= '3.7'
+pytorch-lightning==1.6.5; python_version >= '3.7'
 shortuuid==1.0.1
 scikit-learn==0.24.2
 scikit-optimize==0.8.1
