--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -174,6 +174,7 @@ parts:
               - file: serve/autoscaling
               - file: serve/deployment-graph
                 sections:
+                  - file: serve/deployment-graph/deployment_graph_intro
                   - file: serve/deployment-graph/deployment-graph-e2e-tutorial
                   - file: serve/deployment-graph/chain_nodes_same_class_different_args
                   - file: serve/deployment-graph/combine_two_nodes_with_passing_input_parallel
