Typo: Comment the line you're supposed to uncomment.
Signed-off-by: Dmitri Gekhtman <dmitri.m.gekhtman@gmail.com>

--- a/doc/source/cluster/cluster_under_construction/ray-clusters-on-kubernetes/configs/xgboost-benchmark.yaml
+++ b/doc/source/cluster/cluster_under_construction/ray-clusters-on-kubernetes/configs/xgboost-benchmark.yaml
@@ -45,7 +45,7 @@ metadata:
   name: raycluster-xgboost-benchmark
 spec:
   # Uncomment the next line to experiment with autoscaling.
-  enableInTreeAutoscaling: true
+  # enableInTreeAutoscaling: true
   # The version of Ray you are using. Make sure all Ray containers are running this version of Ray.
   rayVersion: '2.0.0'
   headGroupSpec:
