--- a/.buildkite/pipeline.gpu.large.yml
+++ b/.buildkite/pipeline.gpu.large.yml
@@ -31,6 +31,17 @@
     - bazel test --config=ci $(./ci/run/bazel_export_options) --build_tests_only --jobs 2
       --test_tag_filters=multi_gpu --test_env=RAY_USE_MULTIPROCESSING_CPU_COUNT=1 rllib/...
 
+- label: ":tv: :horse: Alpa: Multi-GPU Tests"
+  conditions: ["RAY_CI_RLLIB_AFFECTED"]
+  commands:
+    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
+    - PYTHON=3.7 TRAIN_TESTING=1 TUNE_TESTING=1 ./ci/env/install-dependencies.sh
+    # - pip install -Ur ./python/requirements_ml_docker.txt
+    - bash ./python/requirements/ml/install_alpa_requirements.sh
+    - pip install -Ur ./python/requirements/ml/requirements_alpa.txt
+    - ./ci/env/env_info.sh
+    - bazel test --config=ci $(./ci/run/bazel_export_options) --build_tests_only --test_tag_filters=alpa python/ray/train/...
+    
 - label: ":tv: :airplane: ML GPU tests (ray/air)"
   conditions: ["RAY_CI_ML_AFFECTED"]
   commands:
